# aicmt

./: .aicmtrc.template  .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml  test.yml  update-homebrew.yml
aicmt/: __main__.c  ai_analyzer.c  ai_analyzer.py  cli.c  cli.py  cli_args.c  cli_args.py  cli_interface.c  cli_interface.py  config.c  config.py  git_operations.c  git_operations.py  utils.c  utils.py
tests/: conftest.py  test_ai_analyzer.py  test_cli.py  test_cli_args.py  test_cli_interface.py  test_config.py  test_git_operations.py  test_system.py  test_utils.py
